// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapLinks renders consistently with a single map 1`] = `
<article
  class="section"
>
  <section
    class="body"
  >
    <div>
      <a
        class="link withArrow"
        href="testurl"
        rel="noopener noreferrer"
        target="_blank"
      >
        Satamakartta (PDF)
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv arrow"
          color="brand"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <polygon
              points="0 24 0 0 24 0 24 24"
            />
            <polygon
              fill="currentColor"
              points="13.5 12 8.5 7 10 5.5 16.5 12 10 18.5 8.5 17"
            />
          </g>
        </svg>
      </a>
    </div>
  </section>
</article>
`;

exports[`MapLinks renders consistently with multiple maps 1`] = `
<article
  class="section"
>
  <section
    class="body"
  >
    <div>
      <a
        class="link withArrow"
        href="testurl"
        rel="noopener noreferrer"
        target="_blank"
      >
        Satamakartta 1 (PDF)
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv arrow"
          color="brand"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <polygon
              points="0 24 0 0 24 0 24 24"
            />
            <polygon
              fill="currentColor"
              points="13.5 12 8.5 7 10 5.5 16.5 12 10 18.5 8.5 17"
            />
          </g>
        </svg>
      </a>
    </div>
    <div>
      <a
        class="link withArrow"
        href="testurl"
        rel="noopener noreferrer"
        target="_blank"
      >
        Satamakartta 2 (PDF)
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv arrow"
          color="brand"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <polygon
              points="0 24 0 0 24 0 24 24"
            />
            <polygon
              fill="currentColor"
              points="13.5 12 8.5 7 10 5.5 16.5 12 10 18.5 8.5 17"
            />
          </g>
        </svg>
      </a>
    </div>
  </section>
</article>
`;
